--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-elements": "^3.4.2",
+    "react-native-geolocation-service": "*",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-maps": "^0.28.0",
+    "react-native-parallax-header": "^1.1.4",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-sticky-parallax-header": "^0.4.1",
     "react-native-vector-icons": "^8.1.0",
     "sax": "^1.2.4"
   },
